--- a/.github/docker-compose.yml
+++ b/.github/docker-compose.yml
@@ -1,12 +1,12 @@
-version: '3.8'
-
 services:
   app:
     build:
-      context: ..  
-      dockerfile: Dockerfile  
+      context: ..
+      dockerfile: .github/Dockerfile
     ports:
+      - "4321:4321"
       - "8000:8000"
+    volumes:
+      - ../bricks:/app/bricks
     environment:
       - PORT=8000
-    command: "uvicorn site.src.api.main:app --host 0.0.0.0 --port 8000"  
