--- a/.github/requirements.txt
+++ b/.github/requirements.txt
@@ -1,12 +1,5 @@
 fastapi
 uvicorn
 pydantic
-plotly
-dash
-numpy
-pandas
-scikit-learn
-scipy
 python-multipart
-matplotlib
-scienceplots
+starlette
